--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,11 +1,30 @@
 .App {
-  text-align: center;
-  padding: 0 10px;
 }
-@media screen and (min-width: 768px) {
-  .App {
+
+.App {
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    width: 320px;
+    padding: 0 10px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (min-width: 768px) {
     text-align: justify;
 
     padding: 0 30px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    margin-left: auto;
+    margin-right: auto;
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1300px;
+    padding: 100px;
   }
 }
