--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,6 +11,9 @@
   .Header__logo {
     width: 200px;
   }
+  .Header__container {
+    padding-left: 0;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
