--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,7 @@
 .Header__container {
   padding: 20px 80px;
   border-bottom: 1px solid var(--main-color);
+  width: 100%;
 }
 
 @media screen and (max-width: 767.99px) {
