--- a/src/components/TransactionForm/TransactionForm.module.scss
+++ b/src/components/TransactionForm/TransactionForm.module.scss
@@ -2,16 +2,40 @@
 .TransactionForm {
   line-height: normal;
 }
+.TransactionForm__colored {
+  background-color: var(--main-color);
+  color: white;
+}
+.TransactionForm__heading {
+  text-align: left;
+  text-transform: uppercase;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
 
+.TransactionForm__wrapper_two {
+  &:last-child {
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    background-position: center 40%;
+  }
+}
+
+.TransactionForm__text {
+  text-align: left;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
 .TransactionForm__container {
   padding: 20px 0;
-  width: 100%;
+  //   width: 100%;
 }
 .TransactionForm__entry {
   border-radius: 15px;
   font-size: 18px;
   padding: 15px;
-  min-height: 50px;
+  max-height: 50px;
 }
 
 .TransactionForm__submit {
@@ -58,7 +82,7 @@
 }
 
 .TransactionForm__card_info {
-  background-repeat: no-repeat;
+  position: relative;
 
   & .TransactionForm__entry {
     background-color: white;
@@ -74,7 +98,7 @@
 .TransactionForm__sum {
   & > * {
     border: 1px solid var(--main-color);
-    width: 100%;
+    width: auto;
     border-radius: 15px;
 
     &::placeholder {
@@ -120,16 +144,24 @@
 @media screen and (max-width: 767px) {
   .TransactionForm {
     width: 100%;
+    padding-top: 40px;
   }
 
   .TransactionForm__entry {
     width: 100%;
   }
 
-  .TransactionForm__card_info {
-    background-image: url(../../img/creditcard_mob.png);
+  .TransactionForm__wrapper_two {
+    &:last-child {
+      background-image: url(../../img/creditcard_mob.png);
+      //   background-size: cover;
+      background-position: top left;
+    }
+  }
 
-    padding: 72px 20px 100px 20px;
+  .TransactionForm__card_info {
+    padding: 70px 20px 0 20px;
+    margin-bottom: 20px;
   }
 
   .TransactionForm__group {
@@ -142,76 +174,95 @@
 
   .TransactionForm__cvv {
     width: 90px;
+    position: absolute;
+    top: 250px;
+    right: 20px;
     margin-left: auto;
   }
 
   .TransactionForm__submit {
     width: 100%;
   }
+
+  .TransactionForm__card_data {
+    margin-bottom: 250px;
+  }
 }
 
 // TAB-DT
 @media screen and (min-width: 768px) {
   .TransactionForm {
-    width: 700px;
+    // min-width: 700px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
 
     & > * {
-      width: 100%;
+      //   width: 100%;
+    }
+  }
+
+  .TransactionForm__wrapper_two {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
+
+    &:last-child {
+      background-image: url(../../img/creditcard_full.png);
+      background-size: contain;
+      background-position: center 40%;
     }
   }
 
   .TransactionForm__card_info {
-    background-image: url(../../img/creditcard_full.png);
-    background-size: contain;
-    background-position: center;
-    padding: 240px 50px 180px 35px;
-    position: relative;
+    padding: 240px 50px 230px 25px;
     margin-bottom: 20px;
-  }
-  .TransactionForm__card_data {
-    max-width: 500px;
-    margin-top: 40px;
-    display: flex;
-    justify-content: space-around;
-  }
+    text-align: center;
 
-  .TransactionForm__number {
-    & .TransactionForm__entry {
-      min-width: 500px;
+    & .TransactionForm__group {
+      & .TransactionForm__entry {
+      }
     }
   }
-
-  .TransactionForm__entry {
-    max-width: 500px;
-    font-size: 22px;
-    height: 70px;
+  .TransactionForm__card_data {
+    // max-width: 500px;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: space-around;
+    text-align: left;
   }
 
   .TransactionForm__cvv {
     position: absolute;
-    width: 40px;
-    top: 300px;
-    right: 90px;
+    width: 10px;
+    top: 255px;
+    right: 80px;
     & .TransactionForm__entry {
       width: 90px;
       text-align: center;
-      padding-left: 25px;
+      padding-left: 5px;
     }
   }
 
   .TransactionForm__submit {
-    width: 50%;
-    align-self: center;
+    width: 200px;
+    padding: 10px 0;
+    margin-top: 30px;
+    position: absolute;
+    bottom: 190px;
   }
   .TransactionForm__payment_data {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
   }
 
   .TransactionForm__payment_info {
-    text-align: center;
   }
 
   .TransactionForm__name,
@@ -219,5 +270,33 @@
     & .TransactionForm__entry {
       max-width: 200px;
     }
+  }
+
+  .TransactionForm__account {
+    & .TransactionForm__entry {
+      width: 100%;
+    }
+  }
+
+  .TransactionForm__sum {
+    & .TransactionForm__entry {
+      width: 420px;
+    }
+  }
+  .TransactionForm__number {
+    text-align: left;
+
+    & .TransactionForm__entry {
+      width: 85%;
+    }
+  }
+  .TransactionForm__expiration {
+    & .TransactionForm__entry {
+      width: 100px;
+    }
+  }
+  .TransactionForm__entry {
+    // max-width: 500px;
+    height: 50px;
   }
 }
