--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -10,7 +10,8 @@
   @media screen and (max-width: 767px) {
     width: 100%;
     width: 320px;
-    padding: 0 10px;
+    padding: 10px;
+    padding-top: 0;
     margin-left: auto;
     margin-right: auto;
   }
@@ -29,7 +30,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1300px;
-    padding: 100px;
+    padding: 50px;
     padding-top: 0;
   }
 }
