--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -18,7 +18,8 @@
   @media screen and (min-width: 768px) {
     text-align: justify;
 
-    padding: 0 30px;
+    padding: 30px;
+    padding-top: 0;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1279px) {
