--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -11,6 +11,7 @@
     width: 100%;
     width: 320px;
     padding: 10px;
+    padding-bottom: 30px;
     padding-top: 0;
     margin-left: auto;
     margin-right: auto;
