table and form corrections

--- a/src/components/Admin/LoginForm/LoginForm.module.scss
+++ b/src/components/Admin/LoginForm/LoginForm.module.scss
@@ -5,3 +5,8 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.LoginForm__button {
+  background-color: var(--main-color);
+  border-color: var(--main-color);
+}
