--- a/src/components/TransactionForm/TransactionForm.module.scss
+++ b/src/components/TransactionForm/TransactionForm.module.scss
@@ -14,6 +14,9 @@
   padding: 15px 0;
 }
 
+.TransactionForm__group {
+  position: relative;
+}
 // WRAPPERS
 .TransactionForm__card_data_wrapper {
   display: flex;
@@ -73,6 +76,14 @@
   & .TransactionForm__entry {
     width: 90px;
   }
+}
+
+.TransactionForm__validation {
+  color: var(--main-color);
+  position: absolute;
+  font-size: 10px;
+  padding-left: 10px;
+  text-shadow: #000000 0 0 1px;
 }
 
 //MEDIA RULES
