--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,7 @@
   --failure-color: #ee3f23;
   --inactive-color: #bfbfbf;
   --main-font: "Nunito", sans-serif;
+  --shadow: 0px 6px 15px rgba(0, 0, 0, 0.1);
 }
 
 body {
@@ -67,6 +68,16 @@ h4,
 h5,
 h6 {
   margin: 0;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 @media screen and (max-width: 767.99px) {
