--- a/src/views/AdminView.module.scss
+++ b/src/views/AdminView.module.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width: 767.99px) {
   .AdminView {
-    padding: 30px;
+    padding: 80px 30px;
   }
 }
 @media screen and (min-width: 768px) {
