--- a/src/components/Admin/AdminLogout/AdminLogout.module.scss
+++ b/src/components/Admin/AdminLogout/AdminLogout.module.scss
@@ -6,9 +6,11 @@
 @media screen and (max-width: 767.99px) {
   .AdminLogout {
     position: absolute;
-    top: 90px;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 20px;
+    left: 60%;
+  }
+  .AdminLogout__button {
+    font-size: 12px;
   }
 }
 @media screen and (min-width: 768px) {
