--- a/src/views/AdminView.module.scss
+++ b/src/views/AdminView.module.scss
@@ -1,11 +1,22 @@
 @media screen and (max-width: 767.99px) {
   .AdminView {
-    padding: 80px 30px;
+    padding: 30px;
+  }
+  .AdminView__wrapper {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin-bottom: 20px;
   }
 }
 @media screen and (min-width: 768px) {
   .AdminView {
     padding: 50px;
+  }
+  .AdminView__wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
   }
 }
 
