--- a/src/components/Admin/ConfirmModal/ConfirmModal.module.scss
+++ b/src/components/Admin/ConfirmModal/ConfirmModal.module.scss
@@ -52,16 +52,26 @@
 
 @media screen and (max-width: 767px) {
   .ConfirmModal {
-    height: 100vh;
-    width: 100vw;
+    height: 30vh;
+    width: 90vw;
+    padding: 15px;
+  }
+  .ConfirmModal__text {
+    margin-bottom: 10px;
   }
   .ConfirmModal__body {
-    padding-top: 70px;
+    padding-top: 20px;
   }
 }
 @media screen and (min-width: 768px) {
   .ConfirmModal {
     padding: 35px 25px;
+  }
+  .ConfirmModal__body {
+    padding-top: 30px;
+  }
+  .ConfirmModal__text {
+    margin-bottom: 20px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1279px) {
