--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,6 +7,9 @@
 }
 
 @media screen and (max-width: 767.99px) {
+  .Header {
+    margin-bottom: 20px;
+  }
 }
 @media screen and (min-width: 768px) {
   .Header__logo {
@@ -14,6 +17,9 @@
   }
   .Header__container {
     padding-left: 0;
+  }
+  .Header {
+    margin-bottom: 40px;
   }
 }
 
