--- a/src/index.scss
+++ b/src/index.scss
@@ -80,6 +80,19 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.25);
+  z-index: 100;
+}
+
 @media screen and (max-width: 767.99px) {
 }
 @media screen and (min-width: 768px) {
